# MoE-Sched

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  setup_cython.py
.claude/: settings.local.json
baselines/: README.md  __init__.py  moe_infinity_baseline.py  vllm_baseline.py
docs/: MANUAL.md
evaluation/: __init__.py  run_experiment.py
examples/: affinity_policy.moe  composed_policy.moe  conditional_policy.moe  fallback_policy.moe  freq_threshold_policy.moe  lfu_policy.moe  lru_policy.moe  run_benchmark.py  run_mock_inference.py  score_policy.moe
moe_policylang/: __init__.py  __main__.py  adaptive.py  auto.py  autotuner.py  baselines.py  cli.py  compiler.py  dsl.py  errors.py  grammar.lark  ir.py  parser.py  validator.py
notebooks/: 01_trace_recording.ipynb  02_profile_dispatch.ipynb  04_full_evaluation.ipynb  05_deepseek_traces.ipynb  README.md  bench_deepseek_a100_colab.ipynb  deepseek_traces.ipynb  mixtral_baseline_comparison.ipynb  trace_recording.ipynb
scripts/: ablation_epcb_sensitivity.py  bench_async_transfer.py  bench_coldstart.py  bench_deepseek_a100.py  bench_power.py  bench_qwen_ablation.py  bench_qwen_budget_sweep.py  bench_qwen_multirun.py  eval_quality.py  generate_figures.py  generate_paper_figures.py  generate_results_figures.py  plot_coldstart.py  profile_dispatch.py  project_throughput.py  record_qwen_trace.py  record_traces.py  run_all_experiments.py  run_constrained_e2e.py  run_deepseek_strategies.py  run_dsl_demo.py  run_e2e_demo.py  run_epcb_design_space.py  run_epcb_qwen.py  run_eval.py  run_irregular_epcb.py  run_policy_sweep.py  run_qwen_moe_demo.py  run_static_vs_dynamic_epcb.py  (+4 more)
(+64 files in other folders)
